Fix blurry text

--- a/client/Thermal/Thermal.css
+++ b/client/Thermal/Thermal.css
@@ -57,7 +57,6 @@
 }
 
 .model {
-  color: #fff;
   font-size: 12px;
 }
 
